syntax = "proto3";

package proto;

option go_package = "github.com/two-phase-commit-demo/coordinator/proto";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  int32 price = 2;
}

message CreateOrderResponse {
  string message = 1;
  bool success = 2;
}
